--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,12 @@
 		</dependency>
 		
 		
-		
+		<dependency>
+ 			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+ 			<version>3.10.1</version>
+  			<type>maven-plugin</type>
+		</dependency>
 		
 		
 		<dependency>
@@ -64,14 +69,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-    				<groupId>org.apache.maven.plugins</groupId>
-    				<artifactId>maven-compiler-plugin</artifactId>
-    				<version>3.8.0</version>
-    				<configuration>
-        				<release>11</release>
-    				</configuration>
 			</plugin>
 		</plugins>
 	</build>
