--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,10 @@
 	<description>Valaxy DevOps project for Spring Boot</description>
 
 	<properties>
-		<java.version>11.0.14</java.version>
+		<jdk.version>11</jdk.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+    		<maven.compiler.target>1.8</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
@@ -71,6 +74,12 @@
           				<groupId>org.apache.maven.plugins</groupId>
           				<artifactId>maven-compiler-plugin</artifactId>
           				<version>3.10.1</version>
+					<configuration>
+        					<release>11</release>
+						<source>${jdk.version}</source>
+                        			<target>${jdk.version}</target>
+                        			<encoding>${project.build.sourceEncoding}</encoding>
+    					</configuration>
         			</plugin>
       			</plugins>
     		</pluginManagement>
@@ -83,6 +92,12 @@
         			<groupId>org.apache.maven.plugins</groupId>
         			<artifactId>maven-compiler-plugin</artifactId>
         			<version>3.10.1</version>
+				<configuration>
+        				<release>11</release>
+					<source>${jdk.version}</source>
+                        		<target>${jdk.version}</target>
+                        		<encoding>${project.build.sourceEncoding}</encoding>
+    				</configuration>
       			</plugin>
 		</plugins>
 	</build>
